fix: edit sizes to fix layout on smaller desktops

--- a/src/components/footer/style.scss
+++ b/src/components/footer/style.scss
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 10px 20px;
+  padding: 0.5vw 1vw;
   width: 100%;
   box-sizing: border-box;
   user-select: none;
