--- a/src/components/header/style.scss
+++ b/src/components/header/style.scss
@@ -5,8 +5,8 @@
   align-items: center;
   width: 100%;
   background-color: rgba(0, 0, 0);
-  height: 50px;
-  padding: 0 20px;
+  height: 2.5vw;
+  padding: 1vw;
   box-sizing: border-box;
   z-index: 3;
 
@@ -20,14 +20,14 @@
 
   &__note {
     position: absolute;
-    bottom: -50px;
-    right: 20px;
-    padding-top: 50px;
+    bottom: -2.5vw;
+    right: 0.5vw;
+    padding-top: 2.5vw;
     margin: 0;
-    height: 40px;
-    width: 100px;
+    height: 2vw;
+    width: 6vw;
     background-color: rgba(0, 0, 0);
-    border-radius: 5px;
+    border-radius: 0.3vw;
     color: rgba($color: #ffffff, $alpha: 0.7);
     text-align: center;
     font-family: "Castoro Titling";
@@ -38,7 +38,7 @@
     z-index: 2;
 
     &:hover {
-      transform: translateY(30px);
+      transform: translateY(5vh);
     }
   }
 
@@ -47,17 +47,8 @@
     position: absolute;
     right: 0;
     height: 100%;
-    width: 300px;
+    width: 20vw;
     background-color: black;
   }
 }
 
-@keyframes moveNote {
-  from {
-    bottom: -80px;
-  }
-
-  to {
-    bottom: 50px;
-  }
-}
