--- a/src/components/hints/style.scss
+++ b/src/components/hints/style.scss
@@ -2,21 +2,21 @@
   &__container {
     position: absolute;
     z-index: 0;
-    bottom: 50px;
+    bottom: 2vw;
     right: 0;
     display: flex;
     flex-direction: column;
-    gap: 30px;
-    padding: 40px 10px 40px 20px;
+    gap: 2vw;
+    padding: 2vw 0.5vw 2vw 1vw;
     background-color: rgba(0, 0, 0, 0.7);
-    border-radius: 10px;
+    border-radius: 0.5vw;
     border-bottom-right-radius: 0;
     border-top-right-radius: 0;
     transition: transform 0.8s ease-in-out;
     user-select: none;
 
     &_open {
-      transform: translateY(60vh);
+      transform: translateY(70vh);
     }
   }
 
@@ -38,8 +38,8 @@
 
   &__item {
     font-family: "Cutive Mono";
-    padding-left: 15px;
-    margin-top: 15px;
+    padding-left: 0.7vw;
+    margin-top: 0.7vw;
     text-transform: none;
   }
 
