--- a/src/components/keyboard/style.scss
+++ b/src/components/keyboard/style.scss
@@ -1,14 +1,14 @@
 .keyboard {
   &__container {
-    width: 820px;
+    width: 46vw;
     display: flex;
     justify-content: center;
-    padding: 10px 6px;
+    padding: 0.6vw 0.5vw;
     background-image: url("../../../assets/images/board.jpg");
     background-repeat: no-repeat;
     background-size: cover;
-    border-radius: 5px;
+    border-radius:0.3vw;
     flex-wrap: wrap;
-    border: 20px solid rgb(0, 0, 0);
+    border: 1vw solid rgb(0, 0, 0);
   }
 }
