--- a/src/components/textarea/style.scss
+++ b/src/components/textarea/style.scss
@@ -1,7 +1,7 @@
 .textarea {
   &__input {
-    width: 830px;
-    height: 150px;
+    width: 46vw;
+    height: 10vw;
     padding: 30px 20px;
     background-color: rgba(255, 255, 255, 0.7);
     border: none;
