--- a/src/style.scss
+++ b/src/style.scss
@@ -1,3 +1,7 @@
+html {
+  font-size: 0.956vw;
+}
+
 body {
   margin: 0;
   background-color: black;
